tests/invalid/type/module_import_path_missing.pts
import "./modules/Missing.pts";

function main() : void {
}
